<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2014 Dennis Hillmann
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>

    <string name="app_name">Fallout Terminal Hacker</string>
    <string name="action_settings">Settings</string>
    <string name="button_clear_text">Clear word</string>
    <string name="ok">Ok</string>
    <string name="title_activity_hacking">Terminal Hacking in Progress</string>
    <string name="use_this_word">Enter this word in the terminal</string>
    <string name="how_many_right">How many characters where right?</string>
    <string name="button_proceed_hack">Proceed</string>
    <string name="Enter_one_word">Enter one word from the terminal:</string>
    <string name="add_word">Add word</string>
    <string name="your_entered_words">Your entered words:</string>
    <string name="start_hack">Start hack</string>
    <string name="clear_words">Delete all words</string>
    <string name="wordlength_not_matching">The length of the word you entered (%1$s) does not match the one expected (%2$s)\n\rThe word was not added!</string>
    <string name="word_already_entered">You already have entered the word "%s".</string>
    <string name="word_cleared">Word cleared!</string>
    <string name="words_cleared">All words cleared!</string>
    <string name="clear_all_words_title">Clear all words?</string>
    <string name="clear_all_words_message">Clearing all words means, that all words will be deleted.\nYou can\'t reverse the action. Once deleted you have to enter all words again!</string>
    <string name="clear_all_words_ok">Yes, clear all words!</string>
    <string name="clear_all_words_nok">Cancel</string>
    <string name="not_enough_words">You didn\'t enter more than 1 word.\nYou don\'t need to use this app.</string>
    <string name="possible_words">Possible words:</string>
    <string name="correct_word_found">The correct word to use has been found!</string>
    <string name="correct_word_found_message">The word to unlock the terminal is \"%1$s\"\n</string>
    <string name="something_went_wrong_title">Oops! Something went wrong!</string>
    <string name="something_went_wrong_message">Something went wrong along the process of hacking the terminal.\nEither I wasn\'t provided with correct informations or one of my memory banks is malfunctioning.\nPlease contact somebody that knows what they do.</string>
    <string name="wordlength">/%1$s</string>
    <string name="help">Help</string>
    <string name="title_activity_main_help">MainHelp</string>
    <string name="hello_world">Hello world!</string>
    <string name="greeting_help">Hello there,</string>
    <string name="help_main_text">it seems to me that you need help in using me.\nFirst let me introduce myself. I\'m Afttha which is short for Automatic Fallout 3 (Three) terminal hacking application. My purpose is to help you hack terminals in the video game Fallout 3.\n\n
    For this you only need to provide me with the words given to you from the hacking mini game and then press the start button. From there on I will give to you the word you choose in the game and only expect you to give me the number of correct characters.\n
    If everything goes it normal way I will provide you with the correct solution normally on the third or fourth try.\n\n
    If you make an error while inputing a word and see it after you pressed the button to add the word, fear not, because all the words in the displayed list are intelligent, if you tap one of it, it will disappear and it will look like it never was there at all.\n\n
    If you have questions or problems you can send a mail to my developer <a href="mailto:dennis.hillmann@gmail.com">Dennis Hillmann</a>.\n
    I wish you in his and my name fun with this little app.</string>

</resources>
